write the README of each lab

--- a/lab1/README
+++ b/lab1/README
@@ -1,5 +1,5 @@
-Please write your name and UTEID in this file.
-Name: ’≈·À
-UTEID: 1101213961
-Name: ¡ı√Œ‹∞
-UTEID: 1101213932
+The goal of this project is to write a translator from 3-address format to C. The purpose of this assignment is to
+Make you familiar with compiler intermediate formats, in this particular case, our 3-address format.
+Write a translator and test its correctness. You will also use this translator to test code transformations in future assignments. (This project is often the same one compiler writers will undertake when starting a new compiler, because it eases testing, assuming a correct C compiler.)
+Write example C code to test your translator.
+
